--- a/README.org
+++ b/README.org
@@ -2,3 +2,11 @@
 * 基本设计
 ** config file
 保存各类配置
+
+* 参考资料
+** Python Daemon
+https://peps.python.org/pep-3143/
+
+* 扩展研究
+** Rust
+https://docs.rs/daemonize/latest/daemonize/
